# turtlebot3-ai-service-robot

./: .gitignore  README.md
planning/: README.md
planning/output/: plan.txt  test_plan.soln
planning/problems/: problem.pddl
planning/src/: cli.py  executor.py  kb.py  main.py  pddl_generator.py  planner.py  utils.py  world_model.py
planning/src/domain/: domain.pddl
ros/milestone1_code/: package.xml  setup.cfg  setup.py
ros/milestone1_code/milestone1_code/: gripper_node.py  navigation_node.py
ros/tb3_course_assets/maps/: map.pgm  map.yaml
ros/tb3_course_assets/models/tb3_house_custom/: model.sdf
ros/tb3_course_assets/worlds/: my_house.world
ros/tb3_service_robot/: package.xml  setup.cfg  setup.py
ros/tb3_service_robot/tb3_service_robot/: gripper_node.py  navigation_node.py
